bitfields/tests/compile_error_cases/errors/bitfield_field_defined_bits_too_small_for_default_value.stderr
error: The default value '4095' exceeds the maximum value for the specified '3 bits (7)'.
 --> tests/compile_error_cases/errors/bitfield_field_defined_bits_too_small_for_default_value.rs:5:25
  |
5 |     #[bits(3, default = 0xFFF)]
  |                         ^^^^^
